Fix Other field option layout alignment in redesigned field options interface

--- a/resources/scss/admin/components/form/_input-icons.scss
+++ b/resources/scss/admin/components/form/_input-icons.scss
@@ -9,7 +9,6 @@
 .frm-with-left-icon,
 .frm-with-right-icon {
 	position: relative;
-	display: block;
 }
 
 i.frm-show-box,
